--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,11 +11,44 @@
   --romanSilver: #757E95;
 }
 
+:root.dark-theme {
+  --yellow:      #927530;
+  --lightCoral:  #8b403f;
+  --apricot:     #927b6c;
+  --lightGreen:  #68807a;
+  --darkGreen:   #527A78;
+  --white:       #444343;
+  --black:       #23262E;
+  --blueGray:    #3a3d49;
+  --romanSilver: #515869;
+
+}
+
+
 * {
   margin: 0;
   padding: 0;
   font-size: 10px;
   box-sizing: border-box;
+}
+.dark-theme {
+  --dyellow:      #927530;
+  --dlightCoral:  #8b403f;
+  --dapricot:     #927b6c;
+  --dlightGreen:  #68807a;
+  --ddarkGreen:   #527A78;
+  --dwhite:       #444343;
+  --dblack:       #23262E;
+  --dblueGray:    #3a3d49;
+  --dromanSilver: #515869;
+
+  --navBg:          var(--dlightGreen);
+  --navLinkHoverBg: var(--dwhite);
+  --mainBg:         var(--dwhite);
+  --fontColor:      var(--dblack);
+  --navLinkColor:   var(--dlightCoral);
+  --formBG:         var(--dlightCoral);
+  --formInput:      var(--dwhite);
 }
 
 /* notice how the default light theme colors are set by this class. */
@@ -156,7 +189,7 @@ label {
 
 .message > textarea {
  flex: 1; 
- min-width: 45rem;
+ min-width: 4rem;
  font-size: 1.8rem;
 }
 
@@ -186,4 +219,27 @@ input[type=text]:focus {
 .contact button {
  background: var(--darkGreen);
  color: var(--white);
+}
+
+
+@media(max-width:600px){
+  body{
+    width: 100vw;
+  }
+  h1 {
+    font-size: 50px;
+    margin-left: 5vw;
+  }
+  h2 {
+    font-size: 50px;
+    margin-left: 5vw;
+  }
+  form.myForm {
+    display: inline;
+    width: 100vw;
+  }
+  #msg {
+    display: inline;
+    min-height: 1rem;
+  }
 }
