Removed redundant code and un-used functions from scripts.js. Added color-scheme for light/dark mode into readme.md. Added comments to help explain functions

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -212,6 +212,8 @@ input[type=text]:focus {
 }
 
 
+/* Media Functions for devices with screenwidth <600px */
+
 @media(max-width:600px){
   body{
     width: 100vw;
